[gd_scene load_steps=18 format=1]

[ext_resource path="res://game/screens/Level.gd" type="Script" id=1]
[ext_resource path="res://game/screens/ScreenControl.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/items/gameplay/Game.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/5x5.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/textures/ui.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]

resource/name = "gameover"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ui/GameOver:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("ui/GameOver/Buttons/Play")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "grab_focus"
} ]
}

[sub_resource type="Animation" id=2]

resource/name = "play"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("ui/Pause:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ui/GameOver:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ui/DsMode:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ui/Total:text")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ "0" ]
}

[sub_resource type="GDScript" id=3]

script/source = "extends Control

func you_died():
	get_node(\"AnimationPlayer\").play(\"you_died\")"

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CanvasItemShader" id=5]

_code = {
"fragment": "vec3 overlay = texscreen(SCREEN_UV)*clamp(sin(TIME*3), 0.3, 1);
COLOR.rgb = overlay;",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=6]

shader/shader = SubResource( 5 )
shader/shading_mode = 0

[sub_resource type="AtlasTexture" id=7]

atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=8]

atlas = ExtResource( 5 )
region = Rect2( 0, 18, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=9]

atlas = ExtResource( 5 )
region = Rect2( 0, 9, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=10]

atlas = ExtResource( 5 )
region = Rect2( 0, 27, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=11]

atlas = ExtResource( 5 )
region = Rect2( 0, 45, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="AtlasTexture" id=12]

atlas = ExtResource( 5 )
region = Rect2( 0, 36, 16, 9 )
margin = Rect2( 0, 0, 0, 0 )

[node name="Level" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )
auto_start = true
difficulty = "easy"
ds_mode = false

[node name="ScreenControl" parent="." instance=ExtResource( 2 )]

next_scene = "res://game/screens/MainMenu.tscn"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/gameover = SubResource( 1 )
anims/play = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "play"

[node name="Game" parent="." instance=ExtResource( 3 )]

process/pause_mode = 1

[node name="ui" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Score" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 1.0
margin/right = 41.0
margin/bottom = 8.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.733333, 0.141176, 0.294118, 1 )
text = "Score"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Total" type="Label" parent="ui"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 24.0
margin/top = 1.0
margin/right = 64.0
margin/bottom = 8.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.734375, 0.140564, 0.293656, 1 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DsMode" type="Control" parent="ui"]

editor/display_folded = true
visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = SubResource( 3 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorFrame" type="ColorFrame" parent="ui/DsMode"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
color = Color( 0.113281, 0.113281, 0.113281, 0.55051 )

[node name="ColorFrame1" type="ColorFrame" parent="ui/DsMode"]

focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 16.0
margin/right = 64.0
margin/bottom = 24.0
color = Color( 0.0703125, 0.0703125, 0.0703125, 0.55051 )

[node name="YouDied" type="Label" parent="ui/DsMode"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 17.0
margin/right = 72.0
margin/bottom = 24.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.65625, 0.0769043, 0.0769043, 1 )
text = "You       Died"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui/DsMode"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/you_died = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Pause" type="Control" parent="ui"]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Overlay" type="ColorFrame" parent="ui/Pause"]

material/material = SubResource( 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
color = Color( 1, 1, 1, 1 )

[node name="Paused" type="Label" parent="ui/Pause"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = 16.0
margin/right = 51.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.705882, 0.137255, 0.282353, 1 )
text = "Paused"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameOver" type="Control" parent="ui"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Overlay" type="ColorFrame" parent="ui/GameOver"]

material/material = SubResource( 6 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 64.0
margin/bottom = 64.0
color = Color( 1, 1, 1, 1 )

[node name="GameOver" type="Label" parent="ui/GameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 8.0
margin/right = 57.0
margin/bottom = 15.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.705882, 0.137255, 0.282353, 1 )
text = "Game Over"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Diff" type="Label" parent="ui/GameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 24.0
margin/right = 56.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.705882, 0.137255, 0.282353, 1 )
text = "Diff"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Highscore" type="Label" parent="ui/GameOver"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 32.0
margin/right = 57.0
margin/bottom = 39.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.705882, 0.137255, 0.282353, 1 )
text = "000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Buttons" type="VBoxContainer" parent="ui/GameOver"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 24.0
margin/top = 43.0
margin/right = 40.0
margin/bottom = 62.0
custom_constants/separation = 1
alignment = 0
__meta__ = {
"_edit_group_": true
}

[node name="Play" type="TextureButton" parent="ui/GameOver/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 9.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 7 )
textures/pressed = SubResource( 8 )
textures/hover = SubResource( 9 )
textures/focused = SubResource( 9 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Menu" type="TextureButton" parent="ui/GameOver/Buttons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 10.0
margin/right = 16.0
margin/bottom = 19.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = SubResource( 10 )
textures/pressed = SubResource( 11 )
textures/hover = SubResource( 12 )
textures/focused = SubResource( 12 )
params/resize_mode = 0
params/stretch_mode = 0

[connection signal="scene_start" from="ScreenControl" to="." method="_on_ScreenControl_scene_start"]

[connection signal="gameover" from="Game" to="." method="_on_Game_gameover"]

[connection signal="ready" from="Game" to="." method="_on_Game_ready"]

[connection signal="toasted" from="Game" to="." method="_on_Game_toasted"]

[connection signal="pressed" from="ui/GameOver/Buttons/Play" to="." method="_on_Play_pressed"]

[connection signal="pressed" from="ui/GameOver/Buttons/Menu" to="." method="_on_Menu_pressed"]


